<resources>
  <string name="app_name">Dice Games</string>
  <string name="wallet_info">Click to roll the die.\nEvery time you hit a six, you earn five coins.</string>
  <string name="coins">Coins</string>
  <string name="zero">0</string>
  <string name="six_faced_die">Six faced die</string>
  <string name="launch_two_or_more">Two or more</string>
  <string name="stop">Stop</string>
  <string name="wager">Wager</string>
  <string name="roll">Roll</string>
  <string name="go">Go</string>
  <string name="two_alike">2 Alike</string>
  <string name="three_alike">3 alike</string>
  <string name="four_alike">4 alike</string>
  <string name="back">Back</string>
  <string name="info">Info</string>
  <string name="two_or_more_activity_url">https://docs.google.com/document/d/1qasddO8VpxAPOcilwboPxdMJ6IFKCigXPHg8n3eS-8g/edit?usp=sharing</string>
</resources>